# UpsNeyro

./: .gitignore  CMakeLists.txt  FilterManager.h  Main.qml  UpscaleManager.cpp  UpscaleManager.h  exportjob.cpp  exportjob.h  filterpreviewmanager.cpp  filterpreviewmanager.h  framecapture.cpp  framecapture.h  framefilter.cpp  framefilter.h  framefilter_cuda.cu  framefilter_cuda.cuh  gpuupscaler.cpp  gpuupscaler.h  hardwareprofiler.cpp  hardwareprofiler.h  jobqueue.cpp  jobqueue.h  logger.cpp  logger.h  main.cpp  performancemonitor.cpp  performancemonitor.h  pipelinemanager.cpp  pipelinemanager.h  presetmanager.cpp  presetmanager.h  projectmanager.cpp  projectmanager.h  pythonupscaler.cpp  pythonupscaler.h  readme.md  recentfilesmodel.cpp  recentfilesmodel.h  requirements.txt  settingsmanager.cpp  (+12 more)
.github/workflows/: ci.yml
ai_engine/: shm_windows.py  upscale.py  upscaler.py
components/: BottomControls.qml  ComparePreview.qml  FilterSlider.qml  FiltersPage.qml  JobQueuePage.qml  PreviewPopup.qml  PrimaryButton.qml  ResolutionButton.qml  ResourceMonitorPage.qml  SettingsPage.qml  SettingsSection.qml  Sidebar.qml  SidebarButton.qml  StatBar.qml  TintedIcon.qml  Toast.qml  UpscalePage.qml  VideoPreview.qml
tests/: CMakeLists.txt  test_projectmanager.cpp  test_upscalemanager.cpp
theme/: Theme.qml
